--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "statamic/cms": "^3.0"
     }
 }
