--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^7.0",
-        "statamic/cms": "^3.0|^4.0"
+        "statamic/cms": "^3.0|^4.0|^5.0"
     }
 }
